2010-01-09 Jesse Kornblum

	* Finished updating download links. Updated and published
	  Hashdeep quick start guide

	
2009-12-30 Jesse Kornblum

	* Converting documentation update to use rsync+ssh to upload content
	

2009-12-29 Jesse Kornblum

	* Version bump to 3.5.1

	* Attempting to fix bug 2922415 involving zero byte files

	* Added a few items to the TODO list

	* Started web page cleanup


2009-12-21 Jesse Kornblum

	* Attempting to fix bug 2919014 regarding hashdeep and its
	  failure to detect when files go missing during an audit
	  if there is another, identical file in a different location

	* Cleanup on md5deep code for -f mode

	* Revised list of new features for release 3.5


2009-09-24 Jesse Kornblum

	* Again revised patch 2855502 to handle the last read of
	  files/stdin when no data is read. This happens when the
	  file size is an exact multiple of the piecewise size.
	

2009-09-16 Jesse Kornblum

	* Updated broken link on web page for Whirlpool.
	

2009-09-09 Jesse Kornblum

	* Applied a modified version of patch 2855502 to fix file size 
	  computation for piecewise hashing of stdin.
	

2009-07-11 Jesse Kornblum

	* Added draft of Hashdeep Getting Started guide
	

2009-07-10 Jesse Kornblum

	* Fixed method to read list of files to hash from a file.
	

2009-06-14 Jesse Kornblum 

	* Experimenting with reading list of files to hash from another
	  file in md5deep.
	

2009-05-22 Jesse Kornblum 

	* Closed search handle in is_junction_point in response
	  to bug 2795587.

	* Attempting to fix -n mode by removing check in is_known_hash
	  for NULL parameters.

	
2009-04-10 Jesse Kornblum 

	* Experimenting with stopping file read on "Invalid argument" errors
	  to avoid crashes on Win32.
	

2009-04-04 Jesse Kornblum 

	* Version bump to 3.3 and released.
	

2009-03-26 Jesse Kornblum 

	* Updated timestamp code to support 64-bit functions on Windows.
	

2009-03-01 Jesse Kornblum 

	* Experimenting by skipping *all* junction points on